# memory-rft

./: .gitignore  README.md  api.py  create_embeddings.py  fix_index.py  optimize_lancedb.py  pyproject.toml  run-verl.sh  test_completion.py  test_transcript_scraper.py  transcript_scraper.py  transcript_to_chunks.py
dataset_utils/: README_qa_api.md  README_qa_generation.md  api.py  create_embeddings.py  generate_qa_pairs.py  ingest_qa_to_lancedb.py  ingest_to_lancedb.py  super_fast_index.py  test_qa_api.py  test_qa_generation.py  transcript_scraper.py
dataset_utils/templates/: index.html  qa.html
dataset_utils/tests/: test_lancedb_index.py
templates/: index.html
verl-instance/: README.md  convert_dataset_format.py  convert_to_parquet.py  cot_tool_sglang.py  create_dataset.py  custom_sglang_rollout.py  memory_tool.py  nccl_health_check.py  podcast_reward.py  podcast_reward_with_tools.py  run_nccl_test.sh  run_podcast_ppo.py  run_podcast_ppo_with_cot_tools.py  simple_nccl_test.py  test_components.py  test_cot_tools.py  test_nccl_progressive.sh  test_simple_training.py  verl_env.py
verl-instance/configs/: podcast_ppo.yaml  podcast_ppo_quick_test.yaml  podcast_ppo_simple.yaml  podcast_ppo_working.yaml
verl-instance/configs/backend/: torch_fsdp.yaml
verl-instance/configs/model/: deepseek_r1_8b.yaml
verl-instance/configs/reward/: podcast.yaml
verl-instance/data/: podcast_questions.jsonl  podcast_questions_mini.jsonl  podcast_questions_mini.parquet  podcast_questions_verl_format.parquet  podcast_questions_with_cot_examples.jsonl
