[project]
name = "memory-rft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "google-generativeai>=0.3.0",
    "jinja2>=3.1.6",
    "lancedb>=0.22.1",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
]
